--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+ParentLibrary.iml
+.idea/
+RestFramework/RestFramework.iml
+RestFramework/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+RestFramework/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
