--- a/RestFramework/pom.xml
+++ b/RestFramework/pom.xml
@@ -3,20 +3,23 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>ParentLibrary</artifactId>
+		<artifactId>wt-parent-library</artifactId>
 		<groupId>com.wiltech</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	
 	<name>Rest Framework</name>
-	<artifactId>RestFramework</artifactId>
+	<artifactId>wt-rest-framework</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 	
 	<properties>
 		<java.version>11</java.version>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 	
 	<dependencies>
