--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ RestFramework/target/maven-status/maven-compiler-plugin/compile/default-compile/
 RestFramework/wt-rest-framework.iml
 RestFramework/target/maven-archiver/pom.properties
 RestFramework/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+CoreFramework/CoreFramework.iml
+CoreFramework/wt-core-framework.iml
+CoreFramework/target/
