--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<modules>
 		<module>RestFramework</module>
+		<module>CoreFramework</module>
 	</modules>
 	<packaging>pom</packaging>
 	<name>WiTech Libraries Parent Project</name>
@@ -24,7 +25,8 @@
 		<maven.compiler.target>11</maven.compiler.target>
 		
 		<!-- Third party -->
-		<spring-core.version>2.1.4.RELEASE</spring-core.version>
+		<spring-core.version>5.1.6.RELEASE</spring-core.version>
+		<spring-boot-parent.version>2.1.4.RELEASE</spring-boot-parent.version>
 		<jackson.version>2.10.1</jackson.version>
 		<lombok.version>1.18.10</lombok.version>
 	
