Fixed api hateos update

--- a/LinksFramework/pom.xml
+++ b/LinksFramework/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	
-	<name>Core Framework</name>
+	<name>Links Framework</name>
 	<artifactId>wt-links-framework</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.0-SNAPSHOT</version>
