Added https to the repositories from maven

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ CoreFramework/target/
 LinksFramework/LinksFramework.iml
 LinksFramework/wt-links-framework.iml
 LinksFramework/target/
+wt-parent-library.iml
