--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 		<repository>
 			<id>central</id>
 			<name>central</name>
-			<url>http://repo.maven.apache.org/maven2</url>
+			<url>https://repo.maven.apache.org/maven2</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
@@ -74,7 +74,7 @@
 		<repository>
 			<id>maven-repo1</id>
 			<name>central</name>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
@@ -87,7 +87,7 @@
 		<repository>
 			<id>maven-uk</id>
 			<name>central</name>
-			<url>http://uk.maven.org/maven2</url>
+			<url>https://uk.maven.org/maven2</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
