--- a/SecurityFramework/.gitignore
+++ b/SecurityFramework/.gitignore
@@ -1,3 +1,4 @@
+HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
@@ -28,6 +29,3 @@ build/
 
 ### VS Code ###
 .vscode/
-SecurityFramework/mvnw
-SecurityFramework/mvnw.cmd
-SecurityFramework/.mvn/
