--- a/SecurityFramework/pom.xml
+++ b/SecurityFramework/pom.xml
@@ -9,11 +9,12 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	
-	<name>Core Framework</name>
-	<artifactId>wt-core-framework</artifactId>
+	<name>Security Framework</name>
+	<description>Security Framework</description>
+	<artifactId>wt-security-framework</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.0-SNAPSHOT</version>
-	
+
 	<properties>
 		<java.version>11</java.version>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -21,45 +22,55 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
-	
+
 	<dependencies>
+		<!-- wiltech dependencies -->
+		<dependency>
+			<groupId>com.wiltech</groupId>
+			<artifactId>wt-rest-framework</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.wiltech</groupId>
+			<artifactId>wt-core-framework</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>${spring-boot-parent.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 			<version>${spring-boot-parent.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring-core.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring-boot-parent.version}</version>
 		</dependency>
 		
-		<!-- Serialize and deserialize objects -->
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jwt.version}</version>
 		</dependency>
 		
-		<!-- third party	-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 			<version>${lombok.version}</version>
 		</dependency>
-	
+		
 	</dependencies>
+
 
 </project>
